--- a/tp2/index.html
+++ b/tp2/index.html
@@ -18,5 +18,6 @@
         <h1>tp2</h1>
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
+        <img src="../galilee.png" alt="Logo Galilee"/>
     </body>
 </html>
