--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-hello
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>TP6</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
+        
+        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
+        <!--<link rel="stylesheet" href="style.css">-->
+        <!--<script src="main.js"></script>-->
+    </head>
+    <body>        
+        <h1>TP6</h1>
+        <!-- Add your site or application content here -->
+        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <img src="../galilee.png" alt="Logo Galilee"/>
+      
+      <ul>
+        <li>
+          <a href="tp1">/TP1</a>
+        </li>
+        <li>
+          <a href="tp2">/TP2</a>
+        </li>
+        <li>
+          <a href="tp3">/TP3</a>
+        </li>
+        <li>
+          <a href="tp4">/TP4</a>
+        </li>
+        <li>
+          <a href="tp5">/TP5</a>
+        </li>
+        <li>
+          <a href="tp6">/TP6</a>
+        </li>
+      </ul>
+    </body>
+</html>
