--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>TP6</h1>
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
+        <img src="galilee.png" alt="Logo Galilee"/>
       
       <ul>
         <li>
