--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP6</title>
+        <title>Index des TP</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,7 +15,7 @@
         <!--<script src="main.js"></script>-->
     </head>
     <body>        
-        <h1>TP6</h1>
+        <h1>Page d'index des TP</h1>
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
         <img src="galilee.png" alt="Logo Galilee"/>
