--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,9 +1,23 @@
+<!doctype html>
 <html>
-<head>
-<title>TP1</title>
-</head>
-<body>
-<h1>TP1</h1>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>TP1</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
+        
+        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
+        <!--<link rel="stylesheet" href="style.css">-->
+        <!--<script src="main.js"></script>-->
+    </head>
+    <body>        
+        <h1>TP1</h1>
+        <!-- Add your site or application content here -->
+        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <img src="../galilee.png" alt="Logo Galilee"/>
+    </body>
 </html>
