--- a/tp1/index.html
+++ b/tp1/index.html
@@ -15,9 +15,9 @@
         <!--<script src="main.js"></script>-->
     </head>
     <body>        
-        <h1>TP1</h1>
+        <title>TP1</title>
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p></p>
         <img src="../galilee.png" alt="Logo Galilee"/>
     </body>
 </html>
