--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
+<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>TP1</title>
+        <link href="CSS/CV_CSS.css" rel="stylesheet" />
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,6 +16,84 @@
         <!--<link rel="stylesheet" href="style.css">-->
         <!--<script src="main.js"></script>-->
     </head>
+    <body> 
+        <div id="cadre">
+            <div id="tab">
+                <div id="coordonnées">
+                    <ul>
+                        <li> ZIRAOUI Youcef </li>
+                        <li> 2 Parvis de la bievre Antony </li>
+                        <li> 0612 59 36 33 </li>
+                        <li> youceff.ziraoui@gmail.com </li>
+                    </ul>
+
+                </div>
+                <!--la photo d'identité -->
+                <div id="picture">
+                    <img src="picture/2x2.jpg" />
+                </div>
+            </div>
+            <!--titre de la formation -->
+            <div id="titre"> Ingénieur D'études et développement</div>
+
+            <!-- les formations-->
+            <div class="sous_titre"> FORMATION </div>
+
+            <div id="formation">
+                <ul>
+                    <li> <div class="titre_N3">2016 à ce jour:  </div> Master II Innovation en Images et Réseaux à l’Université Paris 13, Villetaneuse France </li>
+                    <li> <div class="titre_N3">2013/2014 :      </div> Master II Administration et sécurité des réseaux à l’Université Abderrahmane MIRA de Bejaïa.</li>
+                    <li> <div class="titre_N3">2012/2013 :      </div> Master Informatique à l’Université Abderrahmane MIRA de Bejaïa.</li>
+                    <li> <div class="titre_N3">2008/2012 :      </div> Licence en mathématiques et Informatique à l’Université Abderrahmane MIRA de Bejaïa.</li>
+                    <li> <div class="titre_N3">Juin 2008 :      </div> Obtention du baccalauréat de l’enseignement technique, série Génie Mécanique.</li>
+                </ul>
+            </div>
+
+            <!-- Exprience Prossifionnelle-->
+            <div class="sous_titre"> EXPERIENCES PROFESSIONNELLES </div>
+
+            <div id="exp">
+                <ul>
+                    <li> <div class="titre_N3">05/06/2016 au 31/08/2016 :  </div> Employé en tant que testeur des logiciels au sein de l’entreprise SALDAE </li>
+                    <li> <div class="titre_N3">05/10/2015 au 02/06/2016 :  </div>Employé en tant qu’Informaticien (développeur) au sein de l’entreprise DOTNETPARTNERS</li>
+                    <li> <div class="titre_N3">20/06/2015 au 01/10/2015 :  </div> Stage en tant qu’enseignent de physique au niveau de l’école privée RAMBALDI SCHOOL de Bejaïa. </li>
+                    <li> <div class="titre_N3">Mai 2015                 :  </div> Publication en ligne d’un article “Kernel Methods to Detect Intruders” la conférence CEIT 2015, IEEE, Tlemcen, 24-27 May 2015, pages 1-8.</li>
+                    <li> <div class="titre_N3">2/03/2015 au 22/04/2015  :  </div>Employé en tant qu’Informaticien/GST au sein de l’entreprise ALEXO (Extrusion de Profile Aluminium) .</li>
+                </ul>
+            </div>
+
+            <!--COMPÈTENCES TECHNIQUES-->
+
+            <div class="sous_titre"> COMPÈTENCES TECHNIQUES </div>
+
+            <div id="comp">
+                <ul>
+                    <li> Environnement de développement Netbeans. </li>
+                    <li> Langages : Java, C++, PHP, HTML, ERP, XML. </li>
+                    <li> Bases de données : MySQL </li>
+                    <li> Configuration des réseaux LAN </li>
+                    <li> Configuration des routeurs CISCO sur Packet Tracer. </li>
+                </ul>
+            </div>
+            <!--LANGUES-->
+
+            <div class="sous_titre"> LANGUES </div>
+
+            <div id="lang">
+                <ul>
+                    <li> Arabe et Kabyle: Langue maternelle </li>
+                    <li> Français : Niveau Intermédiaire </li>
+                    <li> Anglais : L’anglais technique </li>
+                </ul>
+            </div>
+            <!--CENTRES D’INTERETS-->
+
+            <div class="sous_titre"> CENTRES D’INTERETS  </div>
+
+            <div id="int">
+                Sport, Voyages, La cuisine, Passion pour les nouvelles technologies, libre de tout engagement.
+            </div>
+        </div>
     <body>        
         <h1>TP1</h1>
         <!-- Add your site or application content here -->
