--- a/tp1/index.html
+++ b/tp1/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>TP1</title>
-        <link href="CSS/CV_CSS.css" rel="stylesheet" />
+        <link href="CV_CSS.css" rel="stylesheet" />
     </head>
     <body> 
         <div id="cadre">
@@ -20,7 +20,7 @@
                 </div>
                 <!--la photo d'identité -->
                 <div id="picture">
-                    <img src="picture/2x2.jpg" />
+                    <img src="2x2.jpg" />
                 </div>
             </div>
             <!--titre de la formation -->
